fix: Set z-index #96

--- a/src/stories/atom/Dropdown/style.css
+++ b/src/stories/atom/Dropdown/style.css
@@ -4,10 +4,11 @@
     @apply px-4 py-1 mb-1;
     @apply border rounded;
   }
+  /* dropdown(menu) panel */
   [role="menu"] {
     @apply flex flex-col;
-    @apply p-2;
-    @apply border rounded;
+    @apply p-2 border rounded;
+    @apply z-10;
   }
   [role="menuitem"] {
     @apply px-2;
