--- a/src/stories/atom/Tooltip/style.css
+++ b/src/stories/atom/Tooltip/style.css
@@ -14,7 +14,7 @@
     max-width: 600px;
 
     position: absolute;
-    z-index: 1;
+    @apply z-10;
 
     &::after {
       content: " ";
